fix margin wraper on share section

--- a/_src/assets/scss/components/_cards-share.scss
+++ b/_src/assets/scss/components/_cards-share.scss
@@ -8,7 +8,7 @@
 }
 
 .container{
-  margin: 30px 20px;
+  margin: 0 20px;
   border: 0px 1px;
 }
 
